--- a/mainPage.html
+++ b/mainPage.html
@@ -8,7 +8,6 @@
 
 </head>
 <body>
-    <div class="navbar"></div>
     <div class="container">
         <!-- <button class="topRight">?</button> -->
         <div class="text">
@@ -21,17 +20,15 @@
             </div>
         </div>
         
-        <img src="earth.png" class="earth"  alt="">
+        <!-- <img src="earth.png" class="earth"  alt=""> -->
     </div>
     <div class="umum">
-        <p class="card-umum">Luas Bumi<span>Kurang lebih 12.756,2 km</span></p>
-        <p class="card-umum">Massa Bumi<span>5,9736 1024 kg</span></p>
-        <p class="card-umum">Jarak dari Matahari<span>Sekitar 149.600.000 km</span></p>
-        <p class="card-umum">Satelit Alami<span>Bulan</span></p>
-        <p class="card-umum">Periode Rotasi<span>23 jam 56 menit dan 4 detik</span></p>
-
+        <h3 class="item-umum">Luas Bumi<span>Kurang lebih 12.756,2 km</span></h3>
+        <h3 class="item-umum">Massa<span>X 5,9736 1024 kg</span></h3>
+        <h3 class="item-umum">Jarak dari Matahari<span>Sekitar 149.600.000 km</span></h3>
+        <h3 class="item-umum">Satelit Alami<span>Bulan</span></h3>
+        <h3 class="item-umum">Periode Rotasi<span>23 jam 56 menit dan 4 detik</span></h3>
     </div>
-    <!-- <p>p</p>
     <p>p</p>
     <p>p</p>
     <p>p</p>
@@ -62,6 +59,7 @@
     <p>p</p>
     <p>p</p>
     <p>p</p>
-    <p>p</p> -->
+    <p>p</p>
+    <p>p</p>
 </body>
 </html>
