--- a/gamePage.html
+++ b/gamePage.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Space Shooter</title>
-    <link rel="stylesheet" href="gamePage.css">
-
-  </head>
- 
-  <script src="gamePage.js" defer></script>
-  <body>
-    <div id="board">
-      <div class="rocks"></div>
-      <div id="jet"></div>
-    </div>
-    <div id="points">0</div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Space Shooter</title>
+  <link rel="stylesheet" href="gamePage.css">
+</head>
+<body>
+  <button id="playButton" class="btn">Play</button>
+  <div id="board">
+    <div class="rocks"></div>
+    <div id="jet"></div>
+  </div>
+  <div id="points">0</div>
+</body>
+<script src="gamePage.js" defer></script>
 </html>
